--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@auto/backend-api",
+  "name": "nextjs-api-boilerplate",
   "version": "0.0.1",
-  "description": "sdk for auto app with typescript & react-native",
+  "description": "Boilerplate for Next.JS API routes with TypeScript",
   "private": true,
   "scripts": {
     "build": "next build",
